# linuxCPlusDevelopEnvironment

./: linux平台开发C++应用程序呢  mac 下使用vmware 虚拟机 安装 centos  开发 c++  一道高中数学题引发的思考-线性规划  再写Python 清明  几个NMS系统核心网的 三方依赖架构源码 Aserver Nserver编译成功  将c++作为更好的c来使用 使用注意  窄带物联 可抛弃服务系统架构分析
20180522Lora协议实现代码 协议标准 与TCP 对比学习/: Lora 协议层 与 TCP 协议层 区别
Base64Key/Base64Key.xcodeproj/: project.pbxproj
Base64Key/Base64Key.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Base64Key/Base64KeyDir/: CMakeLists.txt
Base64Key/Base64KeyDir/sources/: CMakeLists.txt  main.c
C++使用需要注意 memset 与 dynnamic_cast/: dynamic_cast向下转型c++ 使用注意  memset 与 结构体
CMakeSpace/ASMYSQL/src/: datastruct.h  main.c  mysqlclient.h  redisclient.c
CMakeSpace/NSMYSQL/src/: CMakeLists.txt  datastruct.h  main.c
CMakeSpace/RedisASERVER/src/: datastruct.h  main.c  mysqlclient.h
CMakeSpace/RedisNSERVER/src/: CMakeLists.txt  datastruct.h  mysqlclient.c
CPlusTemplate/CPlusTemplate/: BitMask.cpp  BitMask.hpp  Bits.hpp  Builder.cpp  Builder.hpp  Context.cpp  Context.hpp  DataChongZai.cpp  DataChongZai.hpp  DataClass.cpp  DataClass.hpp  DataDuoTai.cpp  DataDuoTai.hpp  DataDuoTai1.cpp  DataDuoTai1.hpp  DataDuoTai2.cpp  DataDuoTai2.hpp  DataDynamicCast.cpp  DataDynamicCast.hpp  DataQianTao.cpp  DataQianTao.hpp  DataStruct.cpp  DataStruct.hpp  DataYouYuan.cpp  DataYouYuan.hpp  Date.cpp  Date.hpp  Director.cpp  Director.hpp  Facroty.cpp  Facroty.hpp  FactoryAbstract.cpp  FactoryAbstract.hpp  FileHandler.cpp  FileHandler.hpp  Memento.cpp  Memento.hpp  Observer.cpp  Observer.hpp  Originator.cpp  (+23 more)
CPlusTemplate/CPlusTemplate.xcodeproj/: project.pbxproj
CPlusTemplate/CPlusTemplate.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
DevMachine/: main.c
Linux进程间通信 管道 与 FIFO管道/CPipeSocket/CPipeSocket/: main.c
Linux进程间通信 管道 与 FIFO管道/CPipeSocket/CPipeSocket.xcodeproj/: project.pbxproj
Linux进程间通信 管道 与 FIFO管道/CPthread/CPthread/: main.c
Linux进程间通信 管道 与 FIFO管道/CPthread/CPthread.xcodeproj/: project.pbxproj
Linux进程间通信 管道 与 FIFO管道/FIFOClient/FIFOClient/: main.c
Linux进程间通信 管道 与 FIFO管道/FIFOClient/FIFOClient.xcodeproj/: project.pbxproj
Linux进程间通信 管道 与 FIFO管道/FIFOServer/FIFOServer/: main.c
Linux进程间通信 管道 与 FIFO管道/FIFOServer/FIFOServer.xcodeproj/: project.pbxproj
Mac 下使用Vmware 安装linux  两者间共享文件 -- 使用鼠标拖拽/: Mac vmware linux 系统虚拟机 共享安装 vmwaretools  mac 下使用vmware 虚拟机 安装 centos  开发 c++
TestCPlus/: CMake 构建定义我们的C++ for linux工程 目录结构准备  CMakeList 开发 基本的 语法规则  CMakeLists-OLD.txt  CMakeLists.txt  CMake常用变量 与 常用环境变量  CMake的安装指令 配置  CMake解释1-1  换个地方保存生成的二进制文件
TestCPlus/CPlusBuild/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
TestCPlus/CPlusBuild/bindir/: hellobin  run.sh
TestCPlus/CPlusBuild/binout/: Makefile  cmake_install.cmake
TestCPlus/CPlusBuild/docout/: Makefile  cmake_install.cmake
TestCPlus/CPlusBuild/include/hello/: hello.h
TestCPlus/CPlusBuild/libout/: Makefile  cmake_install.cmake
TestCPlus/CPlusBuild/libsdir/: libhello.1.2.dylib
TestCPlus/DOC/: CMakeLists.txt  document  hello.text
TestCPlus/LIB/: CMakeLists.txt  Document  hello.c  hello.cpp
TestCPlus/SRC/: CMakeLists.txt  CMake解释2-1  main.c
TestCPlusLibUse/: CMakeLists.txt  工程引用非标准库文件 引用第三方库文件 如何设置我们可以找到头文件
TestCPlusLibUse/SRC/: CMakeLists.txt  main.cpp  找不到第三方库报错
c不使用screen 使用日志文件博弈/: c开发 自定义logdebug  ntp服务器时间同步linux
c开发工程中用到位运算的场景/: lora 基站协议文档  位运算 原则
libev+cjson在mac下调试开发/LIBEV/LIBEV/: main.c
libev+cjson在mac下调试开发/LIBEV/LIBEV.xcodeproj/: project.pbxproj
linux C++ 开发 CMake 使用 编译C++/: CMake  Configure 确定生成的makefile针对的开发环境调整  早上 刚上班 打开mac 打开 linux 虚拟机 linux网络连接不上
linux udp 广播 与 udp 多播/: AES CMAC 传输数据验证 加密算法由算法+模式+填充组成  socket 服务端timewait 多 使用SO_REUSEADDR 使用setsockopt()
linux udp 广播 与 udp 多播/CAESKEY/CAESKEY/: AEST.c  AEST.h  CMAC_TEST.c  CMAC_TEST.h  DataType.h  LoraTest.c  LoraTest.h  SuanFa.c  SuanFa.h  aes.c  aes.h  main.c
linux udp 广播 与 udp 多播/CAESKEY/CAESKEY.xcodeproj/: project.pbxproj
linux udp 广播 与 udp 多播/CNetStat/CNetStat/: NetState.c  NetState.h  main.c
linux udp 广播 与 udp 多播/CNetStat/CNetStat.xcodeproj/: project.pbxproj
linux udp 广播 与 udp 多播/CPlusPlus20171107/CPlusPlus20171107/: AlgorithmBaseClass.cpp  AlgorithmBaseClass.hpp  BaseClass.cpp  BaseClass.hpp  ClientNETIO.cpp  ClientNETIO.hpp  ClientPollNETIO.cpp  ClientPollNETIO.hpp  ClientTcpClass.cpp  ClientTcpClass.hpp  DeriveClass.cpp  DeriveClass.hpp  IOSelect.cpp  IOSelect.hpp  KqueueNETIO.cpp  KqueueNETIO.hpp  PollNETIO.cpp  PollNETIO.hpp  SelectNETIO.cpp  SelectNETIO.hpp  TCPClass.cpp  TCPClass.hpp  VectorClass.cpp  VectorClass.hpp  define.h  main.cpp
linux udp 广播 与 udp 多播/CPlusPlus20171107/CPlusPlus20171107.xcodeproj/: project.pbxproj
linux udp 广播 与 udp 多播/NServerDuplicate/NServerDuplicate/: Queue.h  SocketConnLink.c  SocketConnLink.h  main.c  testnserver.c  testnserver.h  udptest.c  udptest.h
linux udp 广播 与 udp 多播/NServerDuplicate/NServerDuplicate.xcodeproj/: project.pbxproj
linux udp 广播 与 udp 多播/NServerDuplicateClient/NServerDuplicateClient/: Queue.c  SocketConnLink.c  SocketConnLink.h  main.c  udptest.c  udptest.h
linux udp 广播 与 udp 多播/NServerDuplicateClient/NServerDuplicateClient.xcodeproj/: project.pbxproj
mqtt tls层 ssl通讯 解决/: mqtt ssl xcode 中失败 原因  莫名其妙SSL 不能用MQTT 找到原因 缺少openssl ssl库 我们只引入了crypto库
redis同步到mysql/: C语言 redis数据库开发 同步 到mysql总结  C语言 我们不要被 一贯的说char a[] 数组 a 就是数组首元素的地址 这一概念 影响我们的编  C语言结构体内存对齐  内存计算  mysql视图 在将mysql 两个表的数据合并 同步到redis数据库时 用到  比较 c 语言的 assert 与 swift 中的guard 与 常用的if语句的关系
redis同步到mysql/MAC 迁移 linux/: 数据库更新
redis同步到mysql/MAC 迁移 linux/RedisASERVER/: CMakeLists.txt
redis同步到mysql/MAC 迁移 linux/RedisASERVER/src/: CMakeLists.txt  datastruct.h  main.c  mysqlclient.c  redisclient.c  redisclient.h
redis数据hash存储/: redis hash 数据查询
为centos 安装sublime 方便配置c++ js php 等IDE/: sublimtext3 打造c c++开发环境  虚拟机centos 安装sublimetext
如何获取图片中的字符图像 并 对 字符图像识别/: IdentifyCar.py  PIL Image 重要API解释  字符图像识别 原理  车牌识别 -- 车牌定位
开发板如何嵌入系统_汇编/: 开发板 已在 如何将 我们的小操作系统移植进去
维护记录-redis-财务sqlserver/: Windows  财务软件做报表 需要SqlServer配置  redis 服务安装 与 redis-cli 客户端使用
跨平台编译源代码需注意/: C++跨平台编译  Swift跨平台编译
(+103 files in other folders)
