
MESSAGE(STATUS "Project-LIB: LIB")

SET(LIBHELLO_SRC hello.cpp)

ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})

ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})

#对应上面的ADD_LIBRARY设置 对应的动态库 静态库的输出目录

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/libsdir)

#设置共享库的头文件安装路径
#但是这里的设置 生效查看 
#需要在执行cmake make 后 再执行make install 才会看到这里的设置生效

INSTALL(FILES hello.h DESTINATION ${PROJECT_BINARY_DIR}/include/hello)

SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.2 SOVERSION 1)

SET_TARGET_PROPERTIES(hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(hello_static PROPERTIES CLEAN_DIRECT_OUTPUT
1)

SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")

GET_TARGET_PROPERTY(OUTPUT_VALUE hello_static OUTPUT_NAME)

MESSAGE(STATUS "This is the hello_static OUTPUT_NAME:" ${OUTPUT_VALUE})




